Fix flickering site header on slower bandwidth.

--- a/styles.scss
+++ b/styles.scss
@@ -804,9 +804,9 @@ q {
 
   &Logo {
     width: 100px;
-    height: auto;
+    height: 90px;
     aspect-ratio: auto 166 / 150;
-    padding-left: 5px;
+    margin-left: 5px;
   }
 
   &Navigation {
@@ -821,7 +821,7 @@ q {
         background-color: #f6f6f6;
       }
       &.active {
-        border-bottom: 2px solid $primary;
+        box-shadow: inset 0 -2px 0 0 $primary;
       }
     }
   }
